--- a/src/qtgui/audio_options.ui
+++ b/src/qtgui/audio_options.ui
@@ -206,6 +206,13 @@
         </layout>
        </item>
        <item>
+           <widget class="QCheckBox" name="squelchTriggered">
+               <property name="text">
+                   <string>Squelch triggered</string>
+               </property>
+           </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
