multi_vfo: automatically delete locked vfos
...when the frequency goes out of input rate limited bandwidth.

--- a/resources/icons.qrc
+++ b/resources/icons.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/icons">
+    <file>icons/lock.svg</file>
     <file>icons/remove.svg</file>
     <file>icons/add.svg</file>
     <file>icons/audio-card.svg</file>
