--- a/src/qtgui/dockinputctl.ui
+++ b/src/qtgui/dockinputctl.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>240</width>
-    <height>299</height>
+    <height>325</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>240</width>
-    <height>299</height>
+    <height>325</height>
    </size>
   </property>
   <property name="windowIcon">
@@ -245,6 +245,16 @@
       </property>
       <property name="text">
        <string>Enable automatic demodulators</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QCheckBox" name="channelizerCheckBox">
+      <property name="text">
+       <string>Enable FFT channelizer</string>
+      </property>
+      <property name="checked">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
