fft_channelizer: fix typo

--- a/src/qtgui/dockprobe.ui
+++ b/src/qtgui/dockprobe.ui
@@ -30,7 +30,7 @@
    <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
   </property>
   <property name="windowTitle">
-   <string>FFT Ptobe</string>
+   <string>FFT Probe</string>
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <property name="sizePolicy">
