dockfft: add 2M/4M FFT sizes

--- a/src/qtgui/dockfft.ui
+++ b/src/qtgui/dockfft.ui
@@ -955,7 +955,17 @@
             </property>
             <item>
              <property name="text">
-              <string>1048576</string>
+              <string>4194304</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>2097152</string>
+             </property>
+            </item>
+            <item>
+              <property name="text">
+               <string>1048576</string>
              </property>
             </item>
             <item>
