--- a/src/qtgui/dockfft.ui
+++ b/src/qtgui/dockfft.ui
@@ -891,7 +891,7 @@
             </property>
            </widget>
           </item>
-          <item row="15" column="0" colspan="4">
+          <item row="17" column="0" colspan="4">
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -1159,7 +1159,7 @@
             </property>
            </widget>
           </item>
-          <item row="14" column="0" colspan="4">
+          <item row="16" column="0" colspan="4">
            <widget class="QCheckBox" name="bandPlanCheckbox">
             <property name="toolTip">
              <string>Enable Band Plan on bottom of spectrum</string>
@@ -1176,6 +1176,23 @@
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="0" colspan="2">
+           <widget class="QLabel" name="threadsLabel">
+            <property name="text">
+             <string>Backgroung threads</string>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="2" colspan="2">
+           <widget class="QComboBox" name="threadsComboBox">
+            <property name="editable">
+             <bool>true</bool>
+            </property>
+            <property name="currentText">
+             <string>Auto</string>
             </property>
            </widget>
           </item>
