--- a/src/qtgui/dockfft.ui
+++ b/src/qtgui/dockfft.ui
@@ -70,9 +70,9 @@
        <property name="geometry">
         <rect>
          <x>0</x>
-         <y>0</y>
+         <y>-75</y>
          <width>336</width>
-         <height>445</height>
+         <height>488</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout">
@@ -851,7 +851,7 @@
             </property>
            </widget>
           </item>
-          <item row="15" column="0" colspan="4">
+          <item row="17" column="0" colspan="4">
            <spacer name="verticalSpacer">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -1119,7 +1119,7 @@
             </property>
            </widget>
           </item>
-          <item row="14" column="0" colspan="4">
+          <item row="16" column="0" colspan="4">
            <widget class="QCheckBox" name="bandPlanCheckbox">
             <property name="toolTip">
              <string>Enable Band Plan on bottom of spectrum</string>
@@ -1136,6 +1136,23 @@
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="0" colspan="2">
+           <widget class="QLabel" name="threadsLabel">
+            <property name="text">
+             <string>Backgroung threads</string>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="2" colspan="2">
+           <widget class="QComboBox" name="threadsComboBox">
+            <property name="editable">
+             <bool>true</bool>
+            </property>
+            <property name="currentText">
+             <string>Auto</string>
             </property>
            </widget>
           </item>
