--- a/src/qtgui/demod_options.ui
+++ b/src/qtgui/demod_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>228</width>
-    <height>110</height>
+    <height>111</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>0</number>
+      <number>5</number>
      </property>
      <widget class="QWidget" name="demodNoOpt">
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -310,7 +310,7 @@ For digital modes it is best to switch it off.</string>
             </size>
            </property>
            <property name="toolTip">
-		   <string>Carrier tracking PLL. Weak, noisy or fading signals may
+            <string>Carrier tracking PLL. Weak, noisy or fading signals may
 benefit from a slower PLL. A slower PLL will take longer
 to react to changes in the carrier frequency however.</string>
            </property>
@@ -337,7 +337,7 @@ to react to changes in the carrier frequency however.</string>
            </item>
           </widget>
          </item>
-	 <item row="1" column="0">
+         <item row="1" column="0">
           <widget class="QCheckBox" name="syncdcrCheckBox">
            <property name="toolTip">
             <string>Enable/disable DC removal.</string>
@@ -353,6 +353,28 @@ to react to changes in the carrier frequency however.</string>
         </layout>
        </item>
       </layout>
+     </widget>
+     <widget class="QWidget" name="demodFmPll">
+      <widget class="QLabel" name="label_3">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>20</y>
+         <width>94</width>
+         <height>29</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>No options for
+this demodulator</string>
+       </property>
+      </widget>
      </widget>
     </widget>
    </item>
