--- a/src/qtgui/demod_options.ui
+++ b/src/qtgui/demod_options.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>248</width>
-    <height>128</height>
+    <height>146</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,7 +27,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>5</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="demodNoOpt">
       <layout class="QHBoxLayout" name="horizontalLayout">
@@ -180,6 +180,16 @@ For digital modes it is best to switch it off.</string>
            <string>1 ms</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QCheckBox" name="subtonefilterfmCheckBox">
+         <property name="toolTip">
+          <string>Enable high-pass subtone filter</string>
+         </property>
+         <property name="text">
+          <string>Subtone filter</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -365,6 +375,16 @@ to react to changes in the carrier frequency however.</string>
          </property>
          <property name="value">
           <double>0.700000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QCheckBox" name="subtonefilterfmpllCheckBox">
+         <property name="toolTip">
+          <string>Enable high-pass subtone filter</string>
+         </property>
+         <property name="text">
+          <string>Subtone filter</string>
          </property>
         </widget>
        </item>
