--- a/src/qtgui/nb_options.ui
+++ b/src/qtgui/nb_options.ui
@@ -85,6 +85,9 @@
    </item>
    <item row="2" column="1">
     <widget class="QDoubleSpinBox" name="nb3Threshold">
+     <property name="toolTip">
+      <string>Amount of gain to apply to a signal before sending it to librnnoise. Values near 5.0 work well.</string>
+     </property>
      <property name="decimals">
       <number>1</number>
      </property>
