--- a/src/qtgui/dockfft.ui
+++ b/src/qtgui/dockfft.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
-    <height>444</height>
+    <width>332</width>
+    <height>366</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -71,7 +71,7 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>255</width>
+         <width>300</width>
          <height>457</height>
         </rect>
        </property>
@@ -412,59 +412,6 @@
             <item>
              <property name="text">
               <string>48 hours</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="3" column="1" colspan="2">
-           <widget class="QComboBox" name="fftWinComboBox">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="toolTip">
-             <string>FFT window</string>
-            </property>
-            <item>
-             <property name="text">
-              <string>Hamming</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Hann</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Blackman</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Rectangular</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Kaiser</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Blackman-Harris</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Bartlett</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Flattop</string>
              </property>
             </item>
            </widget>
@@ -1214,6 +1161,81 @@
             <property name="text">
              <string>Backgroung threads</string>
             </property>
+           </widget>
+          </item>
+          <item row="3" column="2" colspan="2">
+           <widget class="QComboBox" name="windowCorrectionComboBox">
+            <property name="toolTip">
+             <string>FFT window correction (scaling)</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>None</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Avg Amplitude</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Avg Power</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <widget class="QComboBox" name="fftWinComboBox">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="toolTip">
+             <string>FFT window</string>
+            </property>
+            <item>
+             <property name="text">
+              <string>Hamming</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Hann</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Blackman</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Rectangular</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Kaiser</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Blackman-Harris</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Bartlett</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Flattop</string>
+             </property>
+            </item>
            </widget>
           </item>
          </layout>
