--- a/src/qtgui/dockfft.ui
+++ b/src/qtgui/dockfft.ui
@@ -1248,6 +1248,35 @@
             </item>
            </widget>
           </item>
+          <item row="17" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>Sampling</string>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+            </property>
+           </widget>
+          </item>
+          <item row="17" column="1">
+           <widget class="QComboBox" name="samplingModeBox">
+            <item>
+             <property name="text">
+              <string>Maximum</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Average</string>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Minimum</string>
+             </property>
+            </item>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
